--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,17 @@ cython_debug/
 
 # PyPI config
 .pypirc
+
+# Environment variables
+.env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build artifacts
+.next/
+out/
